assets/scss/blocks/core/list.scss
/* -- List -- */

ul {
	list-style-type: none;

	li {
		padding-bottom: var(--wp--preset--spacing--x-small);
		padding-left: var(--wp--preset--spacing--small);
		position: relative;

		&::before {
			border-bottom: 2px solid var(--wp--preset--color--grey-200);
			content: '';
			display: block;
			height: 0.75rem;
			left: 0;
			position: absolute;
			width: 1.5rem;
		}

		&:last-child {
			padding-bottom: 0;
		}
	}

	ul {
		padding-bottom: 0;
		padding-left: var(--wp--custom--spacing--gap);
	}
}

/* -- List -- */

ol {
	list-style-position: inside;

	li {
		padding-bottom: var(--wp--preset--spacing--x-small);
		position: relative;

		&::marker {
			font-weight: 700;
		}

		&:last-child {
			padding-bottom: 0;
		}
	}

	ol {
		padding-bottom: 0;
		padding-left: var(--wp--custom--spacing--gap);
	}
}

